Renamed instances of old project name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.db_pack_reader">
+    package="com.example.flutter_pf1_feats">
    <application
-        android:label="db_pack_reader"
+        android:label="flutter_pf1_feats"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
