--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: db_pack_reader
+name: flutter_pf1_feats
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
